--- a/app/assets/javascripts/templates/messages.jst.ejs
+++ b/app/assets/javascripts/templates/messages.jst.ejs
@@ -1,4 +1,11 @@
 <h1>Message</h1>
 <% for (var i = 0; i < data.length; i++) { %>
-  <p><%= data[i].body %></p>
+  <div class="outgoing_msg">
+    <div class="sent_msg">
+      <p><%= data[i].body %></p>
+      <span class='time_date'><%= data[i].created_at %> </span>
+    </div>
+
+  </div>
+
 <% } %>
