--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,6 +14,7 @@
   max-width: 500px;
   max-height: 200px;
   overflow-y: auto;
+}
 
 
 .filter-title {
@@ -70,4 +71,13 @@
     background: #FFA500;
   }
 }
+
+.filters-search{
+  padding: 5px;
+
+  .filter-title {
+    border-bottom: 1px solid #FFA500;
+  }
+}
+
 
