added tabs for editing post

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -80,4 +80,20 @@
   }
 }
 
+.img-hover-zoom {
+  height: 300px;
+  overflow: hidden;
+}
+
+.image-preview {
+  overflow: hidden;
+}
+
+.image-preview img {
+  transition: transform .5s ease;
+}
+
+.image-preview:hover img {
+  transform: scale(1.5);
+}
 
