--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -5,15 +5,26 @@
       ul
         - @post.errors.full_messages.each do |message|
           li = message
+  .actions.mb-4
+    = f.button :submit, class: 'btn btn-primary btn-app'
   ul#myTabJust.nav.nav-tabs.nav-justified.md-tabs.indigo role="tablist"
     li.nav-item
-      a#home-tab-just.nav-link.active aria-controls="home-just" aria-selected="true" data-toggle="tab" href="#main-info-tab" role="tab" Main info
+      = link_to info_icon('fa-lg'), '#main-info-tab', class: 'nav-link active', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'home-just' }, role: 'tab'
     li.nav-item
-      a#profile-tab-just.nav-link aria-controls="profile-just" aria-selected="false" data-toggle="tab" href="#other-info-tab" role="tab"  Other info
+      = link_to info_icon('fa-sm'), '#other-info-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'profile-just' }, role: 'tab'
     li.nav-item
-      a#contact-tab-just.nav-link aria-controls="contact-just" aria-selected="false" data-toggle="tab" href="#photos-tab" role="tab"  Photos
+      = link_to camera_icon, '#photos-tab', class: 'nav-link', data: { toggle: "tab" }
     li.nav-item
-      a#contact-tab-just.nav-link aria-controls="contact-just" aria-selected="false" data-toggle="tab" href="#schedule-tab" role="tab"  Schedule
+      = link_to calendar_icon, '#schedule-tab', class: 'nav-link', data: { toggle: "tab" }
+
+      / a#home-tab-just.nav-link.active aria-controls="home-just" aria-selected="true" data-toggle="tab" href="#main-info-tab" role="tab" Main info
+      /   i.fa.fa-info
+    / li.nav-item
+    /   a#profile-tab-just.nav-link aria-controls="profile-just" aria-selected="false" data-toggle="tab" href="#other-info-tab" role="tab"  Other info
+    / li.nav-item
+    /   a#contact-tab-just.nav-link aria-controls="contact-just" aria-selected="false" data-toggle="tab" href="#photos-tab" role="tab"  Photos
+    / li.nav-item
+    /   a#contact-tab-just.nav-link aria-controls="contact-just" aria-selected="false" data-toggle="tab" href="#schedule-tab" role="tab"  Schedule
 
   #myTabContentJust.tab-content.card.pt-5
     #main-info-tab.tab-pane.fade.show.active aria-labelledby="home-tab-just" role="tabpanel"
@@ -56,9 +67,7 @@
           = link_to 'Generate slots', '#', class: 'btn btn-primary btn-app js-generate-slot'
 
           #calendar data-post-id=@post.id data-slot-url=slots_path data-for-posts-url=for_post_slots_path(post_id: @post.id, format: 'json')
-  .row
-    .col-md-5
-      .actions.ml-3 = f.button :submit, class: 'btn btn-primary btn-app'
+
 
 
 
