--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -97,3 +97,15 @@
   transform: scale(1.5);
 }
 
+.edit-post-container {
+  .edit-actions {
+    .btn-group {
+      width: 100%;
+
+      button {
+        margin: 5px 0px;
+      }
+    }
+  }
+}
+
