changes to pages show slim

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,58 +1,64 @@
-p#notice = notice
 .row
   .col-md-7
     hr
-    h3 About Post
-    p
-      strong Title:
-      = @post.title
-    p
-      strong Category:
-      = @post.category.name
-    p
-      strong Images:
-      .flexslider.show-flex
-        ul.slides
-          - @post.images.each do |image|
-            li
-              = image_tag image, class: 'post-img'
+    h3 = @post.title
+    .row
+      .col-md-6
+        p
+          strong Category:
+          = @post.category.name
+        p
+          strong Model:
+          = @post.model
+        p
+          strong Milage:
+          = @post.milage
+        p
+          strong Number of seats:
+          = @post.number_of_seats
+      .col-md-6
+        p
+          strong Fuel:
+          = @post.fuel
+        p
+          strong Year:
+          = @post.production_year
+        p
+          strong Transmission:
+          = @post.transmission
+        p
+          strong HorsePower:
+          = @post.hp
+
+    hr
+    .row
+      .col-md-12
+        .flexslider.show-flex
+          ul.slides
+            - @post.images.each do |image|
+              li
+                = image_tag image, class: 'post-img'
+
   .col-md-5
     - if current_ability.can?(:edit, @post)
       #calendar data-post-id=@post.id data-slot-url=slots_path data-for-posts-url=for_post_slots_path(post_id: @post.id, format: 'json')
-.row
-  .col-md-6
+
     p
       strong Description:
       = @post.description
     p
-      strong Contact:
-      = @post.contact
-    p
       strong Seller:
       = @post.user.email
-      .messaging data-conversation-url=conversations_path(sender_id: current_user.id, recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user.id data-post-id=@post.id
+
+    .messaging data-conversation-url=conversations_path(sender_id: current_user.id, recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user.id data-post-id=@post.id
+    p
       = link_to "Message #{@post.user.full_name}", '#', class: 'btn btn-sm btn-success btn-rounded mb-4', data: { target: "#modalContactForm", toggle: "modal" } unless current_user.my_post?(@post)
-    hr
-    h3 Vehicle
-    p
-      strong Model:
-      = @post.model
-    p
-      strong Milage:
-      = @post.milage
 
     p
-      strong Fuel:
-      = @post.fuel
+      strong Contact:
+      = @post.contact
 
-    p
-      strong Year:
-      = @post.production_year
-
-    - if can?(:edit, @post)
-      = link_to 'Edit', edit_post_path(@post)
-    br
-    =< link_to 'Back', posts_path
+- if current_ability.can?(:edit, @post)
+  = link_to 'Edit', edit_post_path(@post), class: 'btn btn-app'
 
 = render 'shared/modals/contact_renter_modal', post: @post  unless current_user.my_post?(@post)
-
