--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -6,14 +6,19 @@
         ul
           - @post.errors.full_messages.each do |message|
             li = message
+
     .row
       .col-md-2
-        .edit-actions.mb-4
+        - if @post.persisted?
+          .edit-actions.mb-4
+            = submit_button
+            = navigation_button(:highlight, '#', 'btn-orange ')
+            = navigation_button(:show, post_path(@post))
+            = back_button
+            = delete_button(post_path)
+        - else
           = submit_button
-          = navigation_button(:highlight, '#', 'btn-orange ')
-          = navigation_button(:show, post_path(@post))
-          = back_button
-          = delete_button(post_path)
+
 
       .col-md-10
         ul#edit-post-tab-list.nav.nav-tabs.nav-justified.md-tabs.indigo role="tablist"
@@ -55,6 +60,8 @@
               = f.input :number_of_seats
             .col-md-6
               = f.input :hp
+            .col-md-6
+              = f.input :price
           #photos-tab.tab-pane.fade aria-labelledby="contact-tab-just" role="tabpanel"
             .row
               .col-md-12
