added availability for single post on show

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -101,6 +101,8 @@ nav.navbar {
   background: #FFA500;
 }
 
-.btn-saparator{
-
+.flex-center-all {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
