added google maps to app

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -9,6 +9,7 @@ html
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag google_map_url
   body
     = render 'layouts/navbar'
     .container
