--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -76,9 +76,8 @@
         h5.subtitle Contact
         hr
           = @post.contact
-  .row
-    .col-md-12
-       .subtitle-container
+        #googleMap
+      .subtitle-container
         h5.subtitle Description
         hr
           = @post.description
