--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -135,12 +135,14 @@
 .post-show-container {
   .subtitle-container {
     margin-bottom: 25px;
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15) !important;
+    padding: 10px;
 
     h5.subtitle {
     }
 
     hr {
-      margin: 0px;
+      margin: 0px 0px 5px 0px;
     }
 
     .daterange{
@@ -155,6 +157,13 @@
   #googleMap {
     width: 100%;
     height: 300px;
+  }
+
+  .btn-edit {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    border-radius:50px;
   }
 
 }
