added favorite post logic

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -97,6 +97,21 @@ nav.navbar {
   color: white;
 }
 
+.btn-app:hover {
+  background: #CFDBE1;
+  color: black;
+}
+
+.btn-red {
+  background: red;
+  color: white;
+}
+
+.btn-red:hover {
+  background: darkred;
+  color: white;
+}
+
 .btn-orange:hover {
   background: #FFA500;
 }
