--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -65,7 +65,7 @@
               .available style='display:none;'
                 = inline_svg 'check.svg', style: 'height: 40px; display: inline;'
                 span Car available in that range
-                span = button_tag 'Rent', class: 'btn js-rent btn-app btn-sm', style: 'width: 100%'
+                span = button_tag car_icon('Rent'), class: 'btn js-rent btn-success btn', style: 'width: 100%'
               .not-available style='display:none;'
                 = inline_svg 'letter-x.svg', style: 'height: 30px; display: inline;'
                 span Car unavailable in that range
